ajuste e inserção do readme

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <div class="social-media">
                 <a href="#"><i class='bx bxl-linkedin' ></i></a>
                 <a href="#"><i class='bx bxl-github' ></i></a>
+                <a href="#"><i class='bx bx-envelope' ></i></a>
             </div>
 
             <a href="#" class="btn">Download CV</a>
