finalização da pagina inicio - prototipo 1

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,7 @@
 </head>
 
 <body>
-    
+
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
 
@@ -24,31 +25,33 @@
         </nav>
     </header>
 
-    <section class="inicio" id="inicio">
+    <section class="home" id="inicio">
         <div class="home-content">
-            <h3>Olá, eu sou</h3>
-            <h1>Aimê Naísa</h1>
-            <h3>E eu sou <span>Analista de Implantação</span></h3>
-            <p>Transformo processos 
-                em resultados com tecnologia!</p>
 
-            <div class="social-media">
-                <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                <a href="#"><i class='bx bxl-github' ></i></a>
-                <a href="#"><i class='bx bx-envelope' ></i></a>
+            <!-- BLOCO DO TEXTO -->
+            <div class="home-text">
+                <h3>Olá, eu sou</h3>
+                <h1>Aimê Naísa</h1>
+                <h3>E eu sou <span>Analista de Implantação</span></h3>
+                <p>Transformo processos
+                    em resultados com tecnologia!</p>
+
+                <div class="social-media">
+                    <a href="#"><i class='bx bxl-linkedin'></i></a>
+                    <a href="#"><i class='bx bxl-github'></i></a>
+                    <a href="#"><i class='bx bx-envelope'></i></a>
+                </div>
+
+                <a href="#" class="btn">Download CV</a>
             </div>
 
-            <a href="#" class="btn">Download CV</a>
-
+            <!-- BLOCO DA IMAGEM -->
             <div class="inicio-img">
                 <img src="Assets/imgs/inicio.png" alt="Aimê Naísa">
             </div>
 
-        </div>
-    </section>
 
-
-    <script src="Assets/js/script.js"></script>    
+            <script src="Assets/js/script.js"></script>
 </body>
 
 </html>
