finalização da pagina inicio - prototipo final

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Assets/css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Aimê Naísa | Portfolio</title>
+    <title>Aimê Naísa | Portfólio</title>
 </head>
 
 <body>
 
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#" class="logo">Portfólio</a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
