finalização da pagina sobre mim

--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
 
     <section class="home" id="inicio">
         <div class="home-content">
-
-            <!-- BLOCO DO TEXTO -->
             <div class="home-text">
-                <h3>Olá, eu sou</h3>
+                <h3 class="ola">Olá, eu sou</h3>
                 <h1>Aimê Naísa</h1>
-                <h3>E eu sou <span>Analista de Implantação</span></h3>
+                <h3 class="ola">E eu sou <span>Analista de Implantação</span></h3>
                 <p>Transformo processos
                     em resultados com tecnologia!</p>
 
@@ -45,11 +43,28 @@
                 <a href="#" class="btn">Download CV</a>
             </div>
 
-            <!-- BLOCO DA IMAGEM -->
             <div class="inicio-img">
                 <img src="Assets/imgs/inicio.png" alt="Aimê Naísa">
             </div>
+        </div>
+    </section>
 
+    <section class="about" id="sobre">
+        <div class="about-img">
+            <img src="Assets/imgs/sobre.png" alt="Sobre Mim">
+        </div>
+
+        <div class="about-content">
+            <h2 class="heading">Sobre <span>Mim</span></h2>
+            <h3 class="about-services">Analista de Implantação | Suporte Técnico | Dados e Sistemas</h3>
+            <p>Sou Aimê Naísa de Souza, Técnica em Desenvolvimento de Sistemas pelo SENAI e atualmente graduanda em Sistemas da Informação na FURB. Minha trajetória acadêmica e profissional é guiada pela tecnologia, pela lógica e pela busca constante por entender como sistemas, dados e processos podem transformar o dia a dia das
+                Atuo nas áreas de Implantação de Sistemas, Suporte, Dados e Sistemas, sempre focada em analisar cenários, compreender as necessidades do usuário e garantir que as soluções entregues sejam eficientes, funcionais e bem estruturadas.
+            </p>
+           
+            <a href="#" class="btn">Leia Mais</a>
+
+        
+    </section>
 
             <script src="Assets/js/script.js"></script>
 </body>
