finalização da pagina skills

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <nav class="navbar">
             <a href="#inicio" class="ativo">Inicio</a>
-            <a href="#sobre">Sobre Mim</a>
+            <a href="#sobre" class="ativo">Sobre Mim</a>
             <a href="#skills">Skills</a>
             <a href="#projetos">Projetos</a>
             <a href="#contato">Contate-me</a>
@@ -57,16 +57,71 @@
         <div class="about-content">
             <h2 class="heading">Sobre <span>Mim</span></h2>
             <h3 class="about-services">Analista de Implantação | Suporte Técnico | Dados e Sistemas</h3>
-            <p>Sou Aimê Naísa de Souza, Técnica em Desenvolvimento de Sistemas pelo SENAI e atualmente graduanda em Sistemas da Informação na FURB. Minha trajetória acadêmica e profissional é guiada pela tecnologia, pela lógica e pela busca constante por entender como sistemas, dados e processos podem transformar o dia a dia das
-                Atuo nas áreas de Implantação de Sistemas, Suporte, Dados e Sistemas, sempre focada em analisar cenários, compreender as necessidades do usuário e garantir que as soluções entregues sejam eficientes, funcionais e bem estruturadas.
+            <p>Sou Aimê Naísa de Souza, Técnica em Desenvolvimento de Sistemas pelo SENAI e atualmente graduanda em
+                Sistemas da Informação na FURB. Minha trajetória acadêmica e profissional é guiada pela tecnologia, pela
+                lógica e pela busca constante por entender como sistemas, dados e processos podem transformar o dia a
+                dia das
+                Atuo nas áreas de Implantação de Sistemas, Suporte, Dados e Sistemas, sempre focada em analisar
+                cenários, compreender as necessidades do usuário e garantir que as soluções entregues sejam eficientes,
+                funcionais e bem estruturadas.
             </p>
-           
-            <a href="#" class="btn">Leia Mais</a>
 
-        
+            <a href="#" class="btn">Leia Mais</a>
     </section>
 
-            <script src="Assets/js/script.js"></script>
+    <section class="skills" id="skills">
+        <h2 class="heading">Minhas <span>Skills</span></h2>
+
+        <div class="skills-container">
+
+            <div class="skills-box">
+                <div class="skills-icon">
+                    <i class='bx bx-data'></i>
+                </div>
+                <h3>Linguagens de SQL</h3>
+                <p>Experiência sólida com SQL, atuando diretamente com diferentes bancos de dados, como PostgreSQL,
+                    Oracle, Firebird, MariaDB e MySQL.
+                    No dia a dia, utilizo essas linguagens para realizar consultas, manipulação e extração de dados,
+                    criação e manutenção de tabelas, desenvolvimento de rotinas, além de análises que apoiam tomadas de
+                    decisão e processos internos.</p>
+            </div>
+
+            <div class="skills-box">
+                <div class="skills-icon">
+                    <i class='bx bx-signal-5'></i>
+                </div>
+                <h3>Análise de Dados</h3>
+                <p>Experiência em Análise de Dados, atuando desde a coleta e organização das informações até a
+                    interpretação e geração de insights que apoiam decisões estratégicas.
+                    No meu dia a dia, utilizo ferramentas como Metabase e Power BI para transformar dados brutos em
+                    informações claras, visuais e acessíveis.</p>
+            </div>
+
+            <div class="skills-box">
+                <div class="skills-icon">
+                    <i class='bx bx-code-alt'></i>
+                </div>
+                <h3>Programação</h3>
+                <p>Experiência em programação, utilizando linguagens como Java, Python, HTML, CSS e JavaScript para
+                    desenvolver projetos acadêmicos e pessoais.
+                    Ao longo das minhas práticas, trabalhei com lógica de programação, estruturação de código,
+                    organização de pastas, modularização e implementação de funcionalidades que tornam as aplicações
+                    mais eficientes e funcionais.</p>
+            </div>
+
+             <div class="skills-box">
+                <div class="skills-icon">
+                    <i class='bx bx-face' ></i>
+                </div>
+                <h3>Comportamental</h3>
+                <p>Sou uma profissional comunicativa, organizada e adaptável, com facilidade para compreender contextos e transmitir informações de forma objetiva e clara. 
+                    Tenho visão analítica e foco em resolução de problemas, além de aprender rapidamente e lidar bem com desafios e mudanças. Trabalho de forma colaborativa, mantendo boa comunicação com equipes e usuários para alinhar expectativas e garantir entregas consistentes e eficientes.</p>
+            </div>
+
+        </div>
+    </section>
+
+    <script src="Assets/js/script.js"></script>
 </body>
 
 </html>
