--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </a>
                 </div>
 
-                <a href="Assets/cv/Aime_Naisa_CV.pdf" download class="btn">
+                <a href="Assets/CV/Currículo Aimê.pdf" download class="btn">
                     Download CV
                 </a>
             </div>
