--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
                 funcionais e bem estruturadas.
             </p>
 
-            <a href="#" class="btn">Leia Mais</a>
+            <a href="Assets/CV/Carta de Apresentação – Aimê Naísa de Souza.pdf" download class="btn">
+                    Leia Mais
+                </a>
         </div>
     </section>
 
